# PU-Bench

./: .gitignore  BATCH_SIZE_EXPERIMENTS.md  BATCH_SIZE_HYPOTHESIS_TEST.md  BATCH_SIZE_NOMIXUP_EXPERIMENT.md  BATCH_SIZE_NOMIXUP_RESULTS.md  BENCHMARK_COMPARISON.md  BENCHMARK_COMPARISON_NEW_METHODS.md  CALIBRATION_ANALYSIS.md  CARTESIAN_PRIOR_RESULTS.md  COMPREHENSIVE_EXPERIMENT_IMPLEMENTATION.md  CONSISTENCY_LOSS_COMPARISON.md  FINAL_METHOD_COMPARISON.md  FOUR_METHOD_COMPARISON.md  METHOD_SELECTION_GUIDE.md  METRIC_DEPENDENCE_ANALYSIS.md  MIXUP_FORMULATIONS.md  MIXUP_FORMULATION_FINAL_RESULTS.md  POSITIVE_WEIGHT_DERIVATION.md  PRIOR_PARAMETER_GUIDE.md  PUDRA_UNIFIED_NEGATIVE_RESULT.md  README.md  REVISED_DEFAULT_PRIOR_RECOMMENDATION.md  ROBUSTNESS_EXPERIMENTS.md  SOFTLABEL_FAILURE_ANALYSIS.md  THEORETICAL_ANALYSIS.md  THREE_METHOD_COMPARISON_COMPLETE.md  THREE_METHOD_COMPARISON_RESULTS.md  THRESHOLD_INDEPENDENT_METRICS.md  VPUDRA_DESIGN_MATRIX.md  VPUDRA_NAIVE_RESULTS.md  VPU_NOMIXUP_ANALYSIS.md  VPU_PUDRA_VARIANTS_BENCHMARK.md  benchmark_fourier_vectorization.py  calibration_data.csv  pyproject.toml  requirements.txt  run_train.py  task_split.yaml  task_split_full_test.yaml  test_baseline_functions.py  (+4 more)
analysis/: AUTO_VS_05_INSIGHTS.md  EARLY_STOPPING_EXPLANATION.md  FINAL_AUTO_VS_05_RECOMMENDATIONS.md  MERGED_RESULTS.md  PHASE1_EXTENDED_COMPREHENSIVE_TABLE.md  PHASE1_FOCUSED_TABLE.md  PHASE1_PAPER_TABLE.md  PHASE1_STRATIFIED_TABLE.md  PHASE1_SUMMARY.md  PHASE3_MULTISEED_COMPREHENSIVE_TABLE.md  PHASE3_SEED42_COMPREHENSIVE_TABLE.md  PHASE3_SEED42_INSIGHTS.md  (+35 more)
(+570 files in other folders)
